Version 1.10
    * Added a new Bio::DB::Bam method for caching remote files' indices in the
      temp directory. This is used by default by high-level API.
    * Fixed bug in soft and hard clipping code; query endpoints should be
      correct now.
    * Fixed bug in get_all_tags() which was choking on "Z" style tags and giving
      scrambled results.

Version 1.09
    * Disabled checks for file readability when path is a remote BAM
      index. This allows transparent access to BAM databases on
      http/ftp servers.
 
Version 1.08
    * Implemented a clone() method for use immediately before or after
      a fork() attempt.

Version 1.07
    * IMPORTANT API CHANGE 1: The feature strand now returns +1 or -1 to indicate 
      whether the query was reverse complemented in the SAM file.
    * IMPORTANT API CHANGE 2: The $feature->query object's dna() and seq() methods
      now return the sequence as it was read, rather than the reverse
      complemented version as represented in the SAM file. $feature->qseq() 
      returns the reverse complemented version as before.

Version 1.06
    * Updated README to be more explicit about how to troubleshoot 
      compile errors.
    * Modifed so that Bio::DB::Sam will work with GBrowse 1.

Version 1.05
    * Bio::DB::Sam->seq_id() method no longer lower-cases reference names.
    * Quashed enormous memory leak in the pileup() function.

Version 1.04
    * Updated example BAM file (ex1.bam) to be compatible with 1.06 version
      of samtools.

Version 1.03
    * Fixed documentation on running with GBrowse.
    * Fixed alignwrapper behavior so that GBrowse searches don't crash.
  
Version 1.02
    * Fixed bug in parsing of unsigned integer tags that caused some tags to
      be treated as signed integer.

Version 1.01
    * Fixed Build.PL to pick up correct location of bam header files.
    * Eliminated several memory leaks that manifested when reading BAM files 
      with lots of targets.